# ml_template

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  config.yaml  pyproject.toml
src/apps/: inference.py  model_selection.py  training.py
src/configs/: config_loader.py
src/data/connectors/: __init__.py
src/data/connectors/data/: base_data_connector.py  data_connector_factory.py  local_data_connector.py  sklearn_data_connector.py
src/data/connectors/data_connector/: __init__.py  base_data_connector.py  data_connector_factory.py  local_data_connector.py  sklearn_data_connector.py
src/data/connectors/object_connector/: __init__.py  local_object_connector.py  object_connector_factory.py
src/data/connectors/objects/: base_object_connector.py  local_object_connector.py  object_connector_factory.py
src/data/preprocessors/: data_processor.py
src/drift/: __init__.py  data_monitoring_tool.py  model_monitoring_tool.py
src/drift/shared/: __init__.py  report_and_test_logging.py
src/ml/evaluation/: __init__.py  confusion_matrix_figure.py  cross_val_score.py  hyperparameter_tuner.py  metrics.py  roc_auc_figure.py
src/ml/evaluation/figures/: __init__.py  confusion_matrix_figure.py  roc_auc_figure.py
src/ml/evaluation/metrics/: __init__.py  cross_val_score.py  cross_validate_with_predictions.py
src/ml/explainer/: __init__.py  feature_importance_explainer.py  model_explainer.py
src/ml/pipelines/: __init__.py  inference_pipeline.py  training_pipeline.py
src/ml/tuning/: __init__.py  hyperparameter_tuner.py
src/models/: model_selection.py
src/tracking/: __init__.py  base_model_tracker.py  local_model_tracker.py  model_tracker_factory.py
src/utils/: __init__.py  logger.py  subset_data.py
src/utils/data/: __init__.py  create_predictions_dataframe.py
src/utils/logging/: logger.py
src/utils/metrics/: __init__.py  average_metrics.py
