[tool.poetry]
name = "template_ml"
version = "0.0.1"
description = "Machine Learning template"
authors = ["Andres Di Giovanni <andresdigiovanni@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pyyaml = "^6.0.2"
pandas = "^2.2.3"
numpy = "^2.1.3"
scikit-learn = "^1.5.2"
optuna = "^4.0.0"
xgboost = "^2.1.2"
cross-ml = "^0.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
exclude = [".venv", "__init__.py"]
