[project]
name = "ml-template"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "Andres Di Giovanni", email = "andresdigiovanni@gmail.com" }]
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"

dependencies = [
    "catboost>=1.2.7",
    "cross-ml>=1.2.1",
    "evidently>=0.6.6",
    "lightgbm>=4.6.0",
    "optuna>=4.2.1",
    "scikit-learn>=1.6.1",
    "shap>=0.47.0",
    "xgboost>=2.1.4",
]

[dependency-groups]
dev-dependencies = [
    "pytest>=7.2.0",
    "ipykernel>=6.29.5",
]
commits = [
    "pre-commit>=4.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 88
include = '\\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | docs
)/
'''
